[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/Experimental/Draggy.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 85.0235

[sub_resource type="ShaderMaterial" id=7]

[sub_resource type="CubeMesh" id=14]
size = Vector3( 0.1, 0.1, 1 )

[sub_resource type="CapsuleMesh" id=15]
radius = 0.2
mid_height = 0.3
radial_segments = 16

[sub_resource type="Animation" id=16]
resource_name = "New Anim"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2.1, 3 ),
"transitions": PoolRealArray( 1, 0.5, -2, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -49.298, 0 ), Vector3( 0, 52.35, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=17]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Environment" id=11]
ambient_light_color = Color( 1, 1, 1, 1 )
glow_enabled = true
glow_intensity = 3.77
glow_strength = 1.13
glow_bloom = 0.14

[sub_resource type="Animation" id=12]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Viewport:render_target_update_mode")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Viewport:render_target_update_mode")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}

[sub_resource type="CircleShape2D" id=13]
radius = 94.0053

[node name="Mote" type="Node2D"]
script = ExtResource( 1 )

[node name="GrabbyPart" type="KinematicBody2D" parent="."]
collision_layer = 8
collision_mask = 0
input_pickable = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabbyPart"]
visible = false
shape = SubResource( 1 )

[node name="DampedSpringJoint2D" type="PinJoint2D" parent="."]
node_a = NodePath("../GrabbyPart")
node_b = NodePath("../Body")
bias = 0.2
softness = 1.0

[node name="Body" type="RigidBody2D" parent="." groups=["Mote"]]
collision_layer = 4
collision_mask = 38
mass = 6.0
linear_damp = 3.0

[node name="ViewportContainer" type="ViewportContainer" parent="Body"]
material = SubResource( 7 )
margin_left = -100.0
margin_top = -100.0
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 200 )
mouse_filter = 2
stretch = true
stretch_shrink = 4

[node name="Viewport" type="Viewport" parent="Body/ViewportContainer"]
size = Vector2( 50, 50 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="3D" type="Spatial" parent="Body/ViewportContainer/Viewport"]

[node name="FocusPoint" type="Spatial" parent="Body/ViewportContainer/Viewport/3D"]

[node name="MeshInstance" type="MeshInstance" parent="Body/ViewportContainer/Viewport/3D/FocusPoint"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0690653 )
mesh = SubResource( 14 )

[node name="MeshInstance2" type="MeshInstance" parent="Body/ViewportContainer/Viewport/3D/FocusPoint"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.765875 )
mesh = SubResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Body/ViewportContainer/Viewport/3D/FocusPoint"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 16 )
anims/RESET = SubResource( 17 )

[node name="Camera" type="Camera" parent="Body/ViewportContainer/Viewport/3D"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4, 0 )
environment = SubResource( 11 )
projection = 1
current = true
size = 2.4
near = 0.07
far = 35.1

[node name="ViewportRefreshLimiter" type="AnimationPlayer" parent="Body/ViewportContainer/Viewport"]
root_node = NodePath("../..")
autoplay = "New Anim"
"anims/New Anim" = SubResource( 12 )
anims/RESET = SubResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
visible = false
shape = SubResource( 13 )

[node name="Label" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[connection signal="input_event" from="GrabbyPart" to="." method="_on_GrabbyPart_input_event"]
